[gd_scene load_steps=7 format=2]

[ext_resource path="res://Animaciones/SecuasAlienAnimacion/Enemigo.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Animaciones/SecuasAlienAnimacion/EnemigoAnimacion.gd" type="Script" id=3]
[ext_resource path="res://Escenario/Sonidos y Musica/alien.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.25, 19 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 17.5313 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17.375, 20.5 )

[node name="Enemigo" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 1 )
animation = "walk"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.25, -1 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )

[node name="zona1" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="zona1"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="zona2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="zona2"]
position = Vector2( 0.375, -2.5 )
shape = SubResource( 4 )

[node name="alienSonido" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="zona1" to="." method="_on_zona1_body_entered"]
